Revision history for Slang-Subscripts

{{$NEXT}}

0.0.8  2023-09-25T17:43:02+02:00
    - Bump dependency on Slangify
    - Fix test badge

0.0.7  2023-09-22T00:27:02+02:00
    - Fix dependency on Slangify

0.0.6  2023-09-22T00:07:03+02:00
    - Use new test-file extension
    - Add build dependency on Slangify
    - Add sponsor link
    - Update copyright year

0.0.5  2021-11-07T12:53:25+01:00
    - Remove the module statement, we don't need it anymore

0.0.4  2021-09-08T13:34:01+02:00
    - Change file extension to .rakumod
    - Migrate to zef ecosystem
    - Update email address

0.0.3  2021-08-03T13:57:58+02:00
    - Replace mention of Perl 6 by Raku
    - Remove Travis workflow testing
    - Add Github workflow testing
    - Updated copyright year

0.0.2  2019-10-06T16:25:51+02:00
    - Allow subscripts at all places where digits are allowed

0.0.1  2019-10-01T00:27:20+02:00
    - Initial version