@@ -2,7 +2,7 @@ name = Slang::Subscripts
 
 [ReadmeFromPod]
 ; enable = false
-filename = lib/Slang/Subscripts.rakumod
+filename = doc/Slang-Subscripts.rakudoc
 
 [PruneFiles]
 ; match = ^ 'xt/'
@@ -10,4 +10,6 @@ filename = lib/Slang/Subscripts.rakumod
 [UploadToZef]
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
